service.yaml
apiVersion: v1
kind: Service
metadata:
  name: screamingfrog-service
spec:
  selector:
    app: screamingfrog
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https-port
      protocol: TCP
      port: 443
      targetPort: 443
    - name: novnc-port
      protocol: TCP
      port: 6080
      targetPort: 6080
    - name: vnc-port
      protocol: TCP
      port: 5900
      targetPort: 5900
  type: LoadBalancer
